tests/NormalTests/paczka1/small_fuzzy/64736716.err
Error in line 6: uO5 S143 83,6
Error in line 7: WOzpZ A86 95,8
